--- a/internal/compiler/microservice/templates/service.go.tmpl
+++ b/internal/compiler/microservice/templates/service.go.tmpl
@@ -18,19 +18,20 @@ import (
   type {{$service.Name}}ServiceOptions struct {
       {{- template "parseMap" $service.Options }}
   }
-  {{- range $rpc := $service.Rpcs}}
-      type {{$rpc.Name}}RpcOptions struct {
-          {{- template "parseMap" $rpc.Options }}
-      }
-  {{- end }}
+  type {{$service.Name}}RpcOptions struct {
+    Name string
+    Options struct {
+      {{- template "parseMap" $service.RpcOptions }}
+    }
+  }
   type {{$service.Name}}Server interface {
     Start({{$service.Name}}Options) error
     Stop() error
-    Handle(string, func(context.Context, *protolizer.Request[protolizer.Reflected])(*protolizer.Response[protolizer.Reflected], error))
+    Handle({{$service.Name}}RpcOptions, func(context.Context, protolizer.Reflected)(protolizer.Reflected, error))
   }
   type {{$service.Name}}Service interface {
       {{- range $rpc := $service.Rpcs}}
-      {{$rpc.Name}}({{$rpc.Name}}RpcOptions)func(context.Context, *protolizer.Request[{{$rpc.Input}}])(*protolizer.Response[{{$rpc.Output}}], error)
+      {{$rpc.Name}}(context.Context, *{{$rpc.Input}}) (*{{$rpc.Output}}, error)
       {{- end }}
   }        
 
