--- a/internal/compiler/microservice/templates/service.go.tmpl
+++ b/internal/compiler/microservice/templates/service.go.tmpl
@@ -42,14 +42,18 @@ import (
     func Get{{$rpc.Name}}RpcOptions() *{{$service.Name}}RpcOptions {
       return &{{$service.Name}}RpcOptions{ 
         Name: {{$rpc.Name}},
-        {{- template "parseMapValues" $rpc.Options }}
+        Options: struct { 
+          {{- template "parseMap" $rpc.Options }} 
+        } {
+            {{- template "parseMapValues" $rpc.Options }}
+          },
       }
     }
   {{- end }}
 
   func Build{{$service.Name}}(server {{$service.Name}}Server, service {{$service.Name}}Service) {
       {{- range $rpc := $service.Rpcs}}
-        server.Handle(nil, func(ctx context.Context, in protolizer.Reflected)(protolizer.Reflected, error) {
+        server.Handle(Get{{$rpc.Name}}RpcOptions(), func(ctx context.Context, in protolizer.Reflected)(protolizer.Reflected, error) {
           return service.{{$rpc.Name}}(ctx, in.(*{{$rpc.Input}}))
         })
       {{- end }}
@@ -77,7 +81,9 @@ import (
 {{- define "parseMapValues" -}}
   {{- range $key, $value := . }}
     {{- if eq (printf "%T" $value) "map[string]interface {}" }}
-       {{$key}}: {{- template "parseMapValues2" $value }} { 
+       {{$key}}: struct {
+         {{- template "parseMap" $value }} 
+        } { 
           {{- template "parseMapValues" $value }} 
         },
     {{- else }}
@@ -88,16 +94,4 @@ import (
       {{- end }}
     {{- end }}
   {{- end }}
-{{- end }}
-
-{{- define "parseMapValues2" -}}
-  struct { 
-    {{- range $key, $value := . }}
-      {{- if eq (printf "%T" $value) "map[string]interface {}" }}
-        {{$key }}  {{ template "parseMapValues2" $value}};
-      {{- else }}
-        {{$key}} {{(printf "%T" $value)}};
-      {{- end }}
-    {{- end }}
-  } 
 {{- end }}
